--- a/virdocs_upgrades.css
+++ b/virdocs_upgrades.css
@@ -1,3 +1,9 @@
 .chapter-section {
     font-weight: bold;
 }
+.secondary-app-controls {
+    margin: .65rem 0.65rem 0 0 !important;
+}
+.primary-app-controls {
+    margin: .65rem 0 0 0.65rem !important;    
+}
